@@ -1,34 +1,0 @@
-# $NetBSD: Makefile,v 1.42 2022/01/27 10:57:31 wiz Exp $
-
-DISTNAME=	bzr-svn-${VER}
-PKGREVISION=	3
-CATEGORIES=	devel scm
-MASTER_SITES=	http://launchpad.net/bzr-svn/${VER:R}/${VER}/+download/
-MASTER_SITES+=	http://samba.org/~jelmer/bzr/
-VER=		1.2.1
-
-MAINTAINER=	ddeus.pkgsrc@mailnull.com
-HOMEPAGE=	http://wiki.bazaar.canonical.com/ForeignBranches/Subversion
-COMMENT=	Foreign Subversion repository support for Bazaar
-LICENSE=	gnu-gpl-v2
-
-REPLACE_PYTHON=	info.py wiki.py
-
-DEPENDS+=	${PYPKGPREFIX}-subvertpy>=0.8.8:../../devel/py-subvertpy
-DEPENDS+=	${PYPKGPREFIX}-sqlite3-[0-9]*:../../databases/py-sqlite3
-
-# for make test
-USE_TOOLS+=	gmake
-USE_LANGUAGES=	#none
-
-# NOTE: This must run in a UTF-8 locale, e.g. LC_TYPE=en_US.utf8 make test
-#TEST_DEPENDS+=	${PYPKGPREFIX}-testtools-[0-9]*:../../devel/py-testtools24
-#TEST_DEPENDS+=	${PYPKGPREFIX}-paramiko-[0-9]*:../../security/py-paramiko
-#TEST_TARGET=	check-verbose
-
-PYTHON_VERSIONS_ACCEPTED=	27 # py-subvertpy
-
-.include "../../devel/bzr/plugin.mk"
-.include "../../lang/python/application.mk"
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
