@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.18 2021/10/26 10:14:21 nia Exp $
-
-BLAKE2s (bzr-svn-1.2.1.tar.gz) = 2f7aeae839874d8f39366f61fb57c22183f2dd0613a70cd7ceb857f12c4b55c9
-SHA512 (bzr-svn-1.2.1.tar.gz) = d33ac103dc33ff454032258993f3368b4122ba727b4c7f29ad0d16bbe8946d80765d7d938e5f7711281f73f302718bfabf91aebc19c19583026c756178496a21
-Size (bzr-svn-1.2.1.tar.gz) = 296523 bytes
