@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.21746 2022/04/30 21:15:44 wiz Exp $
+$NetBSD: TODO,v 1.21747 2022/05/01 07:56:00 wiz Exp $
 
 Suggested new packages
 ======================
@@ -516,7 +516,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o byobu-5.133
 	o bzr-explorer-1.3.0
 	o bzr-gtk-0.103.0
-	o bzr-svn-1.2.2
 	o bzrtools-2.6.0
 	o c4-1.10
 	o cacti-1.2.19
